FEAT: 실험체 속성, 마스터리, 레벨업 시 스텟 상승량 || 레벨별 필요 경험치량 테이블 저장 구현

--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,25 @@ dependencies {
     // VALIDATION
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // QUERYDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     // LOMBOK
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     // MARIADB
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    // P6SPY
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
 
     // H2
     runtimeOnly 'com.h2database:h2'
@@ -51,6 +64,23 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+def querydslDir = "src/main/generated"
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+
