FEAT: Create ItemArmor, Material Save Method And Entity class

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,6 +24,8 @@ spring:
         order_updates: true
         jdbc:
           batch_size: 500
+  codec:
+    max-in-memory-size: 10MB
 
 logging:
   level:
