--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // MARIADB
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    // MYSQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     // P6SPY
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
