--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/generated
+!**/src/main/resources/application-s3.yml
 
 
 ### STS ###
