--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ dependencies {
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // AWS
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.3.0'
+
+    // S3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
+
     // WEB
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
