--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: mysqldb
-      MYSQL_USER: user
+      MYSQL_USER: root
       MYSQL_PASSWORD: 1234
       MYSQL_ROOT_PASSWORD: 1234
     ports:
